# bobr

./: README.md  bobr.cabal
src/Bobr/: Severity.hs
src/Bobr/Logger/: General.hs
src/Bobr/Logger/Interface/: Implicit.hs  Monad.hs
src/Bobr/QuickStart/Backend/: Async.hs  Pure.hs
src/Bobr/QuickStart/Interface/: Implicit.hs  Monad.hs
src/Bobr/QuickStart/Output/: Console.hs  Json.hs
test/: Test.hs
