cabal-version: 3.0
name:          bobr
version:       0.1.0.0
synopsis:
description:   Backend agnostic structured logger
author:        Danil Berestov
maintainer:    goosedb@yandex.ru

library
  -- cabal-fmt: expand src/
  exposed-modules:
    Bobr.Logger.General
    Bobr.Logger.Interface.Implicit
    Bobr.Logger.Interface.Monad
    Bobr.QuickStart.Backend.Async
    Bobr.QuickStart.Backend.Pure
    Bobr.QuickStart.Interface.Implicit
    Bobr.QuickStart.Interface.Monad
    Bobr.QuickStart.Output.Console
    Bobr.QuickStart.Output.Json
    Bobr.Severity

  build-depends:
    , aeson
    , ansi-terminal
    , base
    , bytestring
    , containers
    , mtl
    , stm
    , text
    , text-builder-linear
    , time

  hs-source-dirs:     src
  default-language:   GHC2021
  ghc-options:        -Wall
  default-extensions:
    BlockArguments
    ConstraintKinds
    GADTs
    ImplicitParams
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards

test-suite bobr-test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  default-language: GHC2021
  ghc-options:        -threaded
  hs-source-dirs:   test
  build-depends:
    , aeson
    , base
    , text 
    , bytestring
    , containers
    , hspec
    , hspec-expectations
    , mtl
    , bobr
    , time
